plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.8'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.mbti-prj'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'com.mysql:mysql-connector-j:8.3.0'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// JSON 파싱
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	// 스웨거/OpenAPI
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

	// Google Cloud Vision
	implementation platform('com.google.cloud:libraries-bom:26.49.0')
	implementation 'com.google.cloud:google-cloud-vision'

	// AWS S3 버킷
	implementation 'software.amazon.awssdk:s3:2.20.0'

	// oauth2
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// WebClient
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
}
tasks.named('test') {
	useJUnitPlatform()
}
